Update title and heading to remove "with Friends" for consistency

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Share Money with Friends</title>
+    <title>Share Money</title>
     <link rel="stylesheet" href="style.css">
     <!-- Favicons -->
     <link rel="apple-touch-icon" sizes="180x180" href="favicon_io/apple-touch-icon.png">
@@ -15,7 +15,7 @@
 </head>
 <body>
     <div class="container">
-        <h1>Share Money with Friends</h1>
+    <h1>Share Money</h1>
         <section id="participants-section">
             <h2>Add Participants</h2>
             <form id="participants-form">
